--- a/src/main/webapp/pages/admin/home.xhtml
+++ b/src/main/webapp/pages/admin/home.xhtml
@@ -22,21 +22,21 @@ limitations under the License.
                 xmlns:p="http://primefaces.org/ui"
                 template="/WEB-INF/view/templates/glue.xhtml">
     <ui:define name="header-replace">
-        <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+        
             <div class="container">
-                <div class="row fl" style="margin-top: 5px;">
+                <div class="row fl" >
                     <h1>#{messages['panel.admin']}</h1>   
                 </div>
             </div>
-        </div>             
+        
     </ui:define>
     <ui:define name="content">
-        <p:panel header="#{messages['panel.tools']}" toggleable="true" toggleOrientation="vertical">
+        <!--<p:panel header="#{messages['panel.tools']}" toggleable="true" toggleOrientation="vertical">
             <h:link value="#{messages['panel.admin.hql']}" rendered="#{true}" 
                     outcome="/pages/admin/query">
                 <f:param name="result"></f:param>                
             </h:link>
-        </p:panel>
+        </p:panel>-->
         <p:panel header="#{messages['panel.admin.entities']}" toggleable="true" toggleOrientation="vertical">
              <h:link value="#{messages['module.BussinesEntity']}" rendered="#{true}" 
                     outcome="/pages/admin/bussinesentitytype/list">
