--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -10,7 +10,7 @@
       xmlns:p="http://primefaces.org/ui">
 
     <ui:composition template="/WEB-INF/view/templates/glue.xhtml">
-        <ui:param name="title" value="Dashboard" />
+        <ui:param name="title" value="Inicio" />
 
         <ui:define name="subnav">
         </ui:define>
@@ -32,7 +32,7 @@
 
         <ui:define name="header-replace">
             <h:panelGroup layout="block" rendered="#{identity.loggedIn}">
-                <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+                <div style="width: 100%; background-color: #00FFCC; margin-bottom: 10px; ">
                     <div class="container">
                         <div class="row fl" style="margin-top: 5px;">
                             <div class="span1 columns">
@@ -126,6 +126,10 @@
 
         <ui:define name="content">
             <p:panel rendered="false">
+                <div class="actions">
+                    <h:link outcome="/pages/admin" value="#{messages['panel.admin']}" rendered="#{identity.loggedIn}">                        
+                    </h:link>
+                </div>
                 <div class="row">
                     <div class="span8 columns">
                         <div class="hanger">
