--- a/src/main/webapp/pages/loggedOffHome.xhtml
+++ b/src/main/webapp/pages/loggedOffHome.xhtml
@@ -6,33 +6,51 @@
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui">
 
-    <ui:composition template="/WEB-INF/view/templates/glue.xhtml">
+    <ui:composition template="/WEB-INF/view/templates/glue_1.xhtml">
         <ui:param name="title" value="#{messages['app.name']}, #{messages['app.logo']}" />
         <ui:define name="header-replace">
-            <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+            <div style="width: 100%; background-color: #66FF99; margin-bottom: 12px; ">
                 <div class="container">
-                    <div class="row fl" style="margin-top: 5px;">
-                        <div class="span2 columns">                            
+                    <div class="row fl" style="margin-top: 15px; margin-left: 0%">
+                        <div class="span2 columns">                           
+
                         </div>
-                        <div class="span7 columns">
+
+                        <div class="span10 columns">
                             <h2>#{messages['app.name']}</h2>
                             <p>#{messages['app.logo']}</p>
                         </div>
                     </div>
-                </div></div>     
+                </div>
+            </div>     
         </ui:define>
 
-        <ui:define name="header-right">
+        <ui:define name="nav-header">
+            <ul class="nav nav-pills">
+                <li class="btn-success"><a href="#">Home</a></li>
+                <li><a href="#">Projects</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Downloads</a></li>
+            </ul>            
         </ui:define>
+
+        <ui:define name="image_gallery">
+            <center> 
+                <p:galleria value="#{galleryController.images}" var="image" panelWidth="700" panelHeight="300" showCaption="true">  
+                    <p:graphicImage value="/resources/images/#{image}" alt="Image Description for #{image}" title="#{image}"/>  
+                </p:galleria> 
+            </center>
+        </ui:define>        
 
         <ui:define name="content">
-            <div lass="info">
-                <p:barChart value="#{statistics.buildCartesianChartModel()}" legendPosition="nw"  
-                            title="#{messages['statitics.work']}" minY="0" maxY="100" style="height:300px;margin-top:20px"/>  
-            </div>
-            <div class="info" style="margin: auto; margin-top: 15px; width: 100%;">
+            <div class="span6">
+                <h2>Servicio Medicos</h2>
+
+            </div>            
+
+            <div class="info" style="background-color: #00FFCC; margin: auto; margin-top: 5%; width: 100%; ">
                 <center>
-                    <div class="alert-message block-message warning">
+                    <div class="alert-message block-message warning" >    
                         <h:link outcome="/pages/signup" value="#{messages['common.join']}" styleClass="btn large primary">
                         </h:link>
                         #{' '}
@@ -41,6 +59,7 @@
                     </div>
                 </center>
             </div>
+
         </ui:define>
 
         <ui:define name="side-items">
