actualizaciones 3 comit paciente

--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -32,7 +32,7 @@
 
         <ui:define name="header-replace">
             <h:panelGroup layout="block" rendered="#{identity.loggedIn}">
-                <div style="width: 100%; background-color: #00FFCC; margin-bottom: 10px; ">
+                <div class="header-replace">
                     <div class="container">
                         <div class="row fl" style="margin-top: 5px;">
                             <div class="span1 columns">
@@ -185,11 +185,7 @@
                     </div>
                 </div>
             </p:panel>
-        </ui:define>
-
-        <ui:define name="sidebar">
-
-        </ui:define>
+        </ui:define>       
 
     </ui:composition>
 </html>
