--- a/src/main/webapp/pages/loggedOffHome.xhtml
+++ b/src/main/webapp/pages/loggedOffHome.xhtml
@@ -9,7 +9,7 @@
     <ui:composition template="/WEB-INF/view/templates/glue_1.xhtml">
         <ui:param name="title" value="#{messages['app.name']}, #{messages['app.logo']}" />
         <ui:define name="header-replace">
-            <div style="width: 100%; background-color: #66FF99; margin-bottom: 12px; ">
+            <div class="header-replace" >
                 <div class="container">
                     <div class="row fl" style="margin-top: 15px; margin-left: 0%">
                         <div class="span2 columns">                           
