actualizacion 5 comit,  admin paciente

--- a/src/main/webapp/pages/home.xhtml
+++ b/src/main/webapp/pages/home.xhtml
@@ -71,120 +71,11 @@
         </ui:define>
 
         <ui:define name="content-pre">
-            <h:panelGroup id="bootcamp" rendered="#{identity.loggedIn}">
-                <h:form rendered="#{userProfile.showBootcamp}">
-                    <div style="margin-bottom: 15px;">
-                        <h1 class="header">#{messages['common.bootglue']} <span>#{messages['common.bootcamp.info']}</span>
-                            <h:commandLink id="close" class="fr" action="#{account.dismissBootcampAjax()}" 
-                                           style="color: white; padding:2px; position: relative; top:-2px; right: -2px;" value="×">
-                                <f:ajax execute="@this" render=":bootcamp"/>
-                            </h:commandLink>
-                        </h1>
-                        <ocp:tooltip forId="bootcamp:close" title="#{messages['']}" placement="left" trigger="hover" />
-                        <div class="body">
-                            <div class="row">
-                                <c:forEach items="#{ui.getProperties(userProfile)}" var="p" >
-                                    <c:choose>
-                                        <c:when test="#{p.type == 'org.eqaula.glue.model.Structure'}">
-                                            <h:link outcome="#{p.customForm != null ? p.customForm : '/pages/profile/data/structure'}">
-                                                <div class="span7 columns" style="margin-left: 48px;">
-                                                    <div class="well" style="height: 225px; width:370px; margin-bottom: 0px;">
-                                                        <p:meterGaugeChart value="#{statistics.buildMeterGaugeModel(statistics.calculeAttributesCompletedPercent(userProfile.id, p.name) * 100)}" 
-                                                                           style="width:370px;height:225px" title="#{p.label}"
-                                                                           seriesColors="d48891,d48891,e4af83,e4af83,82bc82"
-                                                                           showTickLabels="true" labelHeightAdjust="25" intervalOuterRadius="80"
-                                                                           />  
-                                                    </div>
-                                                </div>
-                                                <f:param name="profileId" value="#{userProfile.id}"/>
-                                                <f:param name="structureName" value="#{p.name}"/>
-                                            </h:link>
-                                        </c:when>
-                                        <c:when test="#{p.type == 'org.eqaula.glue.model.Group'}">
-                                            <h:link outcome="/pages/profile/data/group">
-                                                <div class="span7 columns" style="margin-left: 48px;">
-                                                    <div class="well" style="height: 225px; width:370px; margin-bottom: 0px;">
-                                                        <p:meterGaugeChart value="#{statistics.buildMeterGaugeModel(statistics.calculeMembersCompletedPercent(p.minimumMembers, ui.getGroup(userProfile, p).findOtherMembers(userProfile).size()) * 100)}" 
-                                                                           style="width:370px;height:225px" title="#{p.label}"
-                                                                           seriesColors="d48891,d48891,e4af83,e4af83,82bc82"
-                                                                           showTickLabels="true" labelHeightAdjust="25" intervalOuterRadius="80"
-                                                                           />  
-                                                    </div>
-                                                </div>
-                                                <f:param name="groupId" value="#{ui.getGroup(userProfile, p).getId()}"/>
-                                                <f:param name="profileId" value="#{userProfile.id}"/>
-                                            </h:link>
-                                        </c:when>
-                                    </c:choose>
-                                </c:forEach>
-                            </div>
-                        </div>
-                    </div>
-                </h:form>
-            </h:panelGroup>
+            
         </ui:define>
 
         <ui:define name="content">
-            <p:panel rendered="false">
-                <div class="actions">
-                    <h:link outcome="/pages/admin" value="#{messages['panel.admin']}" rendered="#{identity.loggedIn}">                        
-                    </h:link>
-                </div>
-                <div class="row">
-                    <div class="span8 columns">
-                        <div class="hanger">
-                            <b>#{messages['common.welcome']}</b> (#{true ? '' : messages['common.justnow']})
-                            <p><h:link outcome="/pages/profile/view" value="#{messages['common.profile']}" rendered="#{identity.loggedIn}">
-                                    <f:param name="profileId" value="#{userProfile.id}"/>
-                                </h:link><br/>
-                            </p>
-                        </div>
-                    </div>
-                    <div class="span8 columns">
-                        <div class="well" style="padding-top: 7px; padding-bottom: 10px;">
-                            <h:button value="#{messages['common.createnewprofile']}" outcome="/pages/project/create" class="btn fr" rendered="false"/>
-                            <h3>#{messages['module.profile.profiles']} (${profiles.count})</h3>
-
-                            <ul class="plain clear">
-                                <ui:repeat var="p" value="#{projects.all}" varStatus="i">
-                                    <li>
-                                        <div class="box" style="margin-bottom: 8px;">
-
-                                            <div class="row">
-                                                <div class="span6 columns">
-                                                    <h:button value="${p.owner.username}" outcome="/pages/account" /> 
-                                                    <span style="font-size: 16px;">
-                                                        / <h:link outcome="/pages/project/view"
-                                                                  value="#{p.name}">
-                                                            <f:param name="profile" value="#{p.owner.username}" />
-                                                            <f:param name="project" value="#{p.slug}" />
-                                                        </h:link>
-                                                    </span>
-                                                </div>
-                                                <div class="span1 columns">
-                                                </div>
-                                            </div>
-
-                                            <p>Your assignments: <ocp:tooltip placement="right" title="over #{projects.getAssignedStoryCount(userProfile, p)} stories" trigger="hover">
-                                                    <h:link id="assignments" value="#{projects.getAssignedTaskCount(userProfile, p)} tasks" 
-                                                            outcome="/pages/project/view">
-                                                        <f:param name="profile" value="#{p.owner.username}" />
-                                                        <f:param name="project" value="#{p.slug}" />
-                                                    </h:link>
-                                                </ocp:tooltip></p>
-
-                                        </div>
-                                    </li>
-                                </ui:repeat>
-
-                                <h:panelGroup layout="block" rendered="${projects.count == 0}" styleClass="box">
-                                    Looks like you aren't working on anything right now. You can <h:link outcome="/pages/project/create" value="start a new project" /> to get going.
-                                </h:panelGroup>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </p:panel>
+            Bienvenidos al Softare Clínico de Gestión de Servicios de Salud 
         </ui:define>       
 
     </ui:composition>
