--- a/src/main/webapp/pages/profile/list.xhtml
+++ b/src/main/webapp/pages/profile/list.xhtml
@@ -23,7 +23,7 @@ limitations under the License.
                 template="/WEB-INF/view/templates/glue.xhtml">
     <ui:param name="title" value="#{messages['common.profile']} - #{profileHome.instance.username}" />
     <ui:define name="header-replace">
-        <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">            
+        <div class="hea">            
             <div class="container">
                 <div class="span9 columns">
                     <div class="row fl" style="margin-top: 5px;">
