--- a/src/main/webapp/pages/admin/bussinesentitytype/bussinesentitytype.xhtml
+++ b/src/main/webapp/pages/admin/bussinesentitytype/bussinesentitytype.xhtml
@@ -30,7 +30,7 @@ limitations under the License.
         <s:viewAction action="#{bussinesEntityTypeHome.load}" if="#{conversation.transient}"/>                          
     </f:metadata>
     <ui:define name="header-replace">                    
-        <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+       <div class="header-replace">
             <div class="container">
                 <div class="row fl" style="margin-top: 5px;">
                     <div class="span9 columns">   
