--- a/src/main/webapp/pages/admin/bussinesentitytype/list.xhtml
+++ b/src/main/webapp/pages/admin/bussinesentitytype/list.xhtml
@@ -23,7 +23,7 @@ limitations under the License.
                 template="/WEB-INF/view/templates/glue.xhtml">
     <ui:param name="title" value="#{messages['module.BussinesEntityTypes']}" />
     <ui:define name="header-replace">
-        <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+        <div class="header-replace">
             <div class="container">
                 <div class="span9 columns">
                     <div class="row fl" style="margin-top: 5px;">
