--- a/src/main/webapp/pages/admin/bussinesentitytype/property.xhtml
+++ b/src/main/webapp/pages/admin/bussinesentitytype/property.xhtml
@@ -18,7 +18,7 @@
             <f:viewParam name="structureId" value="#{propertyHome.structureId}" />                    
         </f:metadata> 
         <ui:define name="header-replace">
-            <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+            <div class="header-replace">
                 <div class="container">
                     <div class="row fl" style="margin-top: 5px;">                            
                         <h3>#{propertyHome.propertyId != null? messages['common.edit'] : messages['common.add']} 
