--- a/src/main/webapp/pages/admin/security/authorization.xhtml
+++ b/src/main/webapp/pages/admin/security/authorization.xhtml
@@ -2,13 +2,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"      
-      xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:fn="http://java.sun.com/jsp/jstl/functions"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:pe="http://primefaces.org/ui/extensions"
-      xmlns:s="http://jboss.org/seam/faces"
-      xmlns:c="http://java.sun.com/jsp/jstl/core"
-      xmlns:glue="http://eqaula.org/jsf/facelets"
+      xmlns:f="http://java.sun.com/jsf/core"            
+      xmlns:p="http://primefaces.org/ui"      
       xmlns:ocp="http://java.sun.com/jsf/composite/ocpcommon"
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <ui:composition  template="/WEB-INF/view/templates/glue.xhtml">
@@ -18,7 +13,7 @@
         </f:metadata>
 
         <ui:define name="header-replace">            
-            <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+            <div class="header-replace">
                 <div class="container">
                     <div class="row fl" style="margin-top: 5px;">
                         <div class="span9 columns">   
