--- a/src/main/webapp/pages/admin/setting/list.xhtml
+++ b/src/main/webapp/pages/admin/setting/list.xhtml
@@ -14,9 +14,7 @@
 
     <ui:param name="title" value="#{messages['module.setting']} - #{settingHome.instance.name}" />
     <ui:define name="header-replace">
-        <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
-
-
+        <div class="header-replace">
             <div class="container">
                 <div class="row fl" style="margin-top: 5px;">
                     <div class="span9 columns">   
