--- a/src/main/webapp/pages/admin/setting/setting.xhtml
+++ b/src/main/webapp/pages/admin/setting/setting.xhtml
@@ -2,8 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://java.sun.com/jsf/html"      
-      xmlns:f="http://java.sun.com/jsf/core"      
-      xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+      xmlns:f="http://java.sun.com/jsf/core"            
       xmlns:p="http://primefaces.org/ui"
       xmlns:pe="http://primefaces.org/ui/extensions"
       xmlns:s="http://jboss.org/seam/faces"
@@ -13,11 +12,11 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <ui:composition  template="/WEB-INF/view/templates/glue.xhtml">
         <f:metadata>
-            <f:viewParam name="settingId" value="#{settingHome.settingId}" />            
+            <f:viewParam name="settingId" value="#{settingHome.settingId}" />             
         </f:metadata>
 
         <ui:define name="header-replace">
-            <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+            <div class="header-replace">
                 <div class="container">
                     <div class="row fl" style="margin-top: 5px;">
                         <h3>#{settingHome.settingId != null? messages['common.edit'] : messages['common.add']} 
