--- a/src/main/webapp/pages/profile/data/personal.xhtml
+++ b/src/main/webapp/pages/profile/data/personal.xhtml
@@ -19,7 +19,7 @@
         </f:metadata>
 
         <ui:define name="header-replace">
-            <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+            <div class="header-replace">
                 <div class="container">
                     <div class="row fl" style="margin-top: 5px;">
                         <div class="span2 columns">                            
