--- a/src/main/webapp/pages/profile/profile.xhtml
+++ b/src/main/webapp/pages/profile/profile.xhtml
@@ -16,7 +16,7 @@
             <f:viewParam name="backView" value="#{profileHome.backView}" />
         </f:metadata>
         <ui:define name="header-replace">
-            <div style="width: 100%; background-color: #FFF5E3; margin-bottom: 10px; ">
+            <div class="header-replace">
                 <div class="container">
                     <div class="row fl" style="margin-top: 5px;">
                         <h2>#{profileHome.managed ? messages['common.edit'] : messages['common.add']} #{profileHome.instance.fullName}</h2>   
