--- a/src/main/webapp/pages/paciente/lista.xhtml
+++ b/src/main/webapp/pages/paciente/lista.xhtml
@@ -43,7 +43,7 @@
             
             <!--Botones de admin-->
             <div class="admin-actions">
-                <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="paciente" styleClass="btn primary">
+                <h:link value="#{messages['common.add']}" rendered="#{true}" outcome="paciente" styleClass="btn success">
                     <f:param name="pacienteId"></f:param>
                     <f:param name="backView" value="lista"></f:param>
                 </h:link>
